--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
         font-size: 14px;
     }
 }
-.divContainer {
+.divContainer, .newDivContainer {
     border: solid rgb(26, 58, 144) 2px;
     display: flex;
     flex-wrap: wrap;
@@ -43,10 +43,5 @@ h1 {
     margin-bottom: 80px;
     margin-top: 20px;
 
-    div {
-        border: solid black 0px;
-        width: 40px;
-        height: 40px;
-
-    }
+    
 }
